--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</p>
 			<a href="#" class="btn" id="btn">Записаться на курс</a>
 			</div>
-			<img src="img/JavaScript.png" alt="JavaScript img" class="JavaScript-code animated fadeInRight">
+			<img src="img/javascript.png" alt="JavaScript img" class="JavaScript-code animated fadeInRight">
 		</div>	
 
 	</header>
