--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>  
 	<meta charset="UTF-8">
 	<title>Курс "Профессия Fullstack-разработчик на JavaScript"</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
